Adicionando nova página principal

--- a/Homem aranha.html
+++ b/Homem aranha.html
@@ -8,19 +8,18 @@
 </head>
 <body>
     <header id="Cabeçalho">
-        <img src="/Projeto TW/imgs/logoSpiderMan.png" alt="" id="imgLogo">  
+        <img src="imgs/imgsSite/logoSpiderMan.png" alt="Logo do Homem Aranha" id="logo">
         <nav>
-            <a href="/Projeto TW/index.html">Home</a>
-            <a href="/Projeto TW/Homem aranha.html">Homem Aranha</a>
-            <a href="">Curiosidades</a>
-            <a href="">Impacto na Cultura POP</a>
+            <a href="/index.html">Home</a>
+            <a href="/Homem aranha.html">Homem Aranha</a>
         </nav>
     </header>
-    <div class="container">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+    <div id="content">
+    <div id="imagem"><img src="imgs/imgsSite/spider2.png" alt=""></div>   
+    <div id="title">
+    <div><h1>QUEM É?</h1></div>
+    <div></div>
     </div>
+    </div>    
 </body>
 </html>
