--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylePag1.css">
+    <link rel="stylesheet" href="home.css">
     <title>Homem Aranha</title>
 </head>
 <body>
     <header id="Cabeçalho">
-        <img src="/Projeto TW/imgs/logoSpiderMan.png" alt="" id="imgLogo">  
+        <img src="imgs/imgsSite/logoSpiderMan.png" alt="Logo do Homem Aranha" id="logo">
         <nav>
-            <a href="/Projeto TW/index.html">Home</a>
-            <a href="/Projeto TW/Homem aranha.html">Homem Aranha</a>
-            <a href="">Curiosidades</a>
-            <a href="">Impacto na Cultura POP</a>
+            <a href="/index.html">Home</a>
+            <a href="/Homem aranha.html">Homem Aranha</a>
         </nav>
     </header>
-
-
-
+    <div id="content">
+    <div id="title"><h1>SPIDER-MAN</h1></div>
+    <div id="imagem"><img src="imgs/imgsSite/Spider1.png" alt=""></div>
+    </div>    
 
 </body>
 </html>
