Criação de duas novas páginas "Homem aranha" e "Vilões"

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <nav>
             <a href="/index.html">Home</a>
             <a href="/Homem aranha.html">Homem Aranha</a>
+            <a href="/viloes.html">Vilões</a>
         </nav>
     </header>
-    <div id="content">
-    <div id="title"><h1>SPIDER-MAN</h1></div>
+    <div class="content">
+    <div class="title"><h1>SPIDER-MAN</h1></div>
     <div id="imagem"><img src="imgs/imgsSite/Spider1.png" alt=""></div>
     </div>    
 
