terminando a estrtura da pagina dos viloes

--- a/viloes.html
+++ b/viloes.html
@@ -32,9 +32,44 @@
     <div class="textAlign">
         <h2>O SEXTETO SINISTRO</h2>
         <p id="SinisterSix">O Sexteto Sinistro é um grupo formado por alguns dos inimigos mais perigosos do Homem-Aranha, reunidos com um único objetivo: 
-            derrotar o herói. A equipa original foi criada pelo Doutor Octopus e incluía Electro, Kraven, o Caçador, Homem-Areia, Mystério 
-            e Abutre. Juntos, combinaram as suas habilidades e estratégias na esperança de superar o herói, mas mesmo enfrentando vários 
+            derrotar o herói. A equipa original foi criada pelo <b>Doutor Octopus</b> e incluía <b>Electro</b>, <b>Kraven, o Caçador</b>, <b>Homem-Areia</b>, <b>Mystério</b> 
+            e <b>Abutre</b>. Juntos, combinaram as suas habilidades e estratégias na esperança de superar o herói, mas mesmo enfrentando vários 
             adversários ao mesmo tempo, o Homem-Aranha conseguiu resistir. O Sexteto Sinistro tornou-se um dos grupos de vilões mais icónicos 
             dos quadrinhos da Marvel.
         </p>
     </div>
+    <div class="boxVilao">
+        <div class="boxVilaoItem">
+            <img src="/imgs/imgsSite/Six/octopus.jpg" alt="">
+            <H3>DOUTOR OCTOPUS</H3>
+            <p>OTTO GUNTHER OCTAVIUS</p>
+        </div>
+        <div class="boxVilaoItem">
+            <img src="/imgs/imgsSite/Six/electro.jpg" alt="">
+            <H3>ELECTRO</H3>
+            <p>MAXWELL DILLON</p>
+        </div>
+        <div class="boxVilaoItem">
+            <img src="/imgs/imgsSite/Six/kraven.jpg" alt="">
+            <H3>KRAVEN, O CAÇADOR</H3>
+            <p>SERGEI KRAVINOFF</p>
+        </div>
+        <div class="boxVilaoItem">
+            <img src="/imgs/imgsSite/Six/sandman.png" alt="">
+            <H3>HOMEM-AREIA</H3>
+            <p>WILLIAM BAKER</p>
+        </div>
+        <div class="boxVilaoItem">
+            <img src="/imgs/imgsSite/Six/mysterio.jpg" alt="">
+            <H3>MYSTÉRIO</H3>
+            <p>QUENTIN BECK</p>
+        </div>
+        <div class="boxVilaoItem">
+            <img src="/imgs/imgsSite/Six/lizard.png" alt="">
+            <H3>LAGARTO</H3>
+            <p>DR. CURTIS CONNORS</p>
+        </div>
+    </div>
+
+</body>
+</html>
