alterando página "universo" permitindo que as imagens se adaptem as diferentes resoluções

--- a/Universo.html
+++ b/Universo.html
@@ -50,7 +50,7 @@
             <img src="/imgs/imgsSite/universe/newyork.jpg" alt="Nova Iorque">
             <div class="universo-texto">
                 <h3>Nova Iorque</h3>
-                <p>A cidade onde tudo acontece — um cenário vibrante perfeito para o Homem-Aranha.</p>
+                <p>A cidade onde tudo acontece um cenário vibrante perfeito para o Homem-Aranha.</p>
             </div>
         </div>
 
@@ -76,4 +76,4 @@
 
 
 </body>
-</html><
+</html>
