deixando a pagina principal responsiva e adicionando burguer menu

--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
 </head>
 <body>
     <header id="Cabeçalho">
+
+         <input type="checkbox" id="menu-toggle" class="menu-toggle">
+
+        <label for="menu-toggle" class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+        </label>
+
         <img src="imgs/imgsSite/logoSpiderMan.png" alt="Logo do Homem Aranha" id="logo">
-        <nav>
-            <a href="/index.html">Home</a>
-            <a href="/Homem aranha.html">Homem Aranha</a>
-            <a href="/viloes.html">Vilões</a>
-            <a href="/Universo.html">Universo</a>
+
+        <nav class="nav-menu">
+
+            <a href="/index.html" class="nav-item">Home</a>
+            <a href="/Homem aranha.html" class="nav-item">Homem Aranha</a>
+            <a href="/viloes.html" class="nav-item">Vilões</a>
+            <a href="/Universo.html" class="nav-item">Universo</a>
+
         </nav>
     </header>
     <div class="content">
