--- a/Universo.html
+++ b/Universo.html
@@ -7,71 +7,87 @@
     <title>Universo</title>
 </head>
 <body>
-    <header id="Cabeçalho">
+     <header id="Cabeçalho">
+
+         <input type="checkbox" id="menu-toggle" class="menu-toggle">
+
+        <label for="menu-toggle" class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+        </label>
+
         <img src="imgs/imgsSite/logoSpiderMan.png" alt="Logo do Homem Aranha" id="logo">
-        <nav>
-            <a href="/index.html">Home</a>
-            <a href="/Homem aranha.html">Homem Aranha</a>
-            <a href="/viloes.html">Vilões</a>
-            <a href="/Universo.html">Universo</a>
+
+        <nav class="nav-menu">
+
+            <a href="/index.html" class="nav-item">Home</a>
+            <a href="/Homem aranha.html" class="nav-item">Homem Aranha</a>
+            <a href="/viloes.html" class="nav-item">Vilões</a>
+            <a href="/Universo.html" class="nav-item">Universo</a>
+
         </nav>
     </header>
-    <div class="textAlign">
-        <h2>O UNIVERSO</h2>
-        <div class="title"><p>O universo do Homem-Aranha é vasto, emocional e cheio de personagens e acontecimentos que moldam a 
-            vida de Peter Parker dentro e fora da máscara. Desde relações pessoais profundas até os cenários vibrantes de Nova Iorque, 
-            cada elemento contribui para construir a história de um herói humano, falível e inspirador. A seguir, estão alguns dos pilares
-             que definem este mundo tão marcante e inesquecível.</p>
-        </div>
-    </div>
-
-
-    <section class="universo-section">
-
-    <div class="universo-list">
-
-        <div class="universo-item">
-            <img src="/imgs/imgsSite/universe/maryjane.jpg" alt="Mary Jane">
-            <div class="universo-texto">
-                <h3>Mary Jane Watson</h3>
-                <p>Mary Jane é uma das pessoas mais importantes na vida de Peter Parker, representando equilíbrio entre a vida pessoal e a vida de herói.</p>
+    <main>
+        <div class="textAlign">
+            <h2>O UNIVERSO</h2>
+            <div class="title"><p>O universo do Homem-Aranha é vasto, emocional e cheio de personagens e acontecimentos que moldam a 
+                vida de Peter Parker dentro e fora da máscara. Desde relações pessoais profundas até os cenários vibrantes de Nova Iorque, 
+                cada elemento contribui para construir a história de um herói humano, falível e inspirador. A seguir, estão alguns dos pilares
+                que definem este mundo tão marcante e inesquecível.</p>
             </div>
         </div>
 
-        <div class="universo-item">
-            <img src="/imgs/imgsSite/universe/tioben.jpg" alt="Tio Ben">
-            <div class="universo-texto">
-                <h3>Tio Ben</h3>
-                <p>A morte de Tio Ben deu origem ao lema que define o herói: “Com grandes poderes vêm grandes responsabilidades”.</p>
-            </div>
-        </div>
 
-        <div class="universo-item">
-            <img src="/imgs/imgsSite/universe/newyork.jpg" alt="Nova Iorque">
-            <div class="universo-texto">
-                <h3>Nova Iorque</h3>
-                <p>A cidade onde tudo acontece um cenário vibrante perfeito para o Homem-Aranha.</p>
-            </div>
-        </div>
+        <section class="universo-section">
 
-        <div class="universo-item">
-            <img src="/imgs/imgsSite/universe/dailybungle.jpg" alt="O Clarim Diário">
-            <div class="universo-texto">
-                <h3>O Clarim Diário</h3>
-                <p>O jornal mais famoso do universo, onde Peter trabalha como fotógrafo enquanto Jameson difama o herói.</p>
-            </div>
-        </div>
+        <div class="universo-list">
 
-        <div class="universo-item">
-            <img src="/imgs/imgsSite/universe/tiamay.jpg" alt="Amigos e Aliados">
-            <div class="universo-texto">
-                <h3>Tia May</h3>
-                <p>Tia May é a figura maternal mais importante na vida de Peter Parker. Ela representa o lar, o apoio emocional e a força silenciosa que o inspira a continuar sendo o Homem-Aranha.</p>
+            <div class="universo-item">
+                <img src="/imgs/imgsSite/universe/maryjane.jpg" alt="Mary Jane">
+                <div class="universo-texto">
+                    <h3>Mary Jane Watson</h3>
+                    <p>Mary Jane é uma das pessoas mais importantes na vida de Peter Parker, representando equilíbrio entre a vida pessoal e a vida de herói.</p>
+                </div>
             </div>
-        </div>
 
-    </div>
-</section>
+            <div class="universo-item">
+                <img src="/imgs/imgsSite/universe/tioben.jpg" alt="Tio Ben">
+                <div class="universo-texto">
+                    <h3>Tio Ben</h3>
+                    <p>A morte de Tio Ben deu origem ao lema que define o herói: “Com grandes poderes vêm grandes responsabilidades”.</p>
+                </div>
+            </div>
+
+            <div class="universo-item">
+                <img src="/imgs/imgsSite/universe/newyork.jpg" alt="Nova Iorque">
+                <div class="universo-texto">
+                    <h3>Nova Iorque</h3>
+                    <p>A cidade onde tudo acontece um cenário vibrante perfeito para o Homem-Aranha.</p>
+                </div>
+            </div>
+
+            <div class="universo-item">
+                <img src="/imgs/imgsSite/universe/dailybungle.jpg" alt="O Clarim Diário">
+                <div class="universo-texto">
+                    <h3>O Clarim Diário</h3>
+                    <p>O jornal mais famoso do universo, onde Peter trabalha como fotógrafo enquanto Jameson difama o herói.</p>
+                </div>
+            </div>
+
+            <div class="universo-item">
+                <img src="/imgs/imgsSite/universe/tiamay.jpg" alt="Amigos e Aliados">
+                <div class="universo-texto">
+                    <h3>Tia May</h3>
+                    <p>Tia May é a figura maternal mais importante na vida de Peter Parker. Ela representa o lar, o apoio emocional e a força silenciosa que o inspira a continuar sendo o Homem-Aranha.</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    </main>
+    
 
 
 
