--- a/viloes.html
+++ b/viloes.html
@@ -7,17 +7,31 @@
     <title>Vilões</title>
 </head>
 <body>
-    <header id="Cabeçalho">
+     <header id="Cabeçalho">
+
+         <input type="checkbox" id="menu-toggle" class="menu-toggle">
+
+        <label for="menu-toggle" class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+        </label>
+
         <img src="imgs/imgsSite/logoSpiderMan.png" alt="Logo do Homem Aranha" id="logo">
-        <nav>
-            <a href="/index.html">Home</a>
-            <a href="/Homem aranha.html">Homem Aranha</a>
-            <a href="/viloes.html">Vilões</a>
-            <a href="/Universo.html">Universo</a>
+
+        <nav class="nav-menu">
+
+            <a href="/index.html" class="nav-item">Home</a>
+            <a href="/Homem aranha.html" class="nav-item">Homem Aranha</a>
+            <a href="/viloes.html" class="nav-item">Vilões</a>
+            <a href="/Universo.html" class="nav-item">Universo</a>
+
         </nav>
     </header>
+
+    <main>
     <div class="contentPag3">
-    <div class="title">
+    <!-- <div class="title">
     <div id="boxi"><h1>OS VILÕ ES</h1></div>
     <div><p>O Homem-Aranha enfrenta alguns dos vilões mais marcantes e complexos do universo Marvel. Cada inimigo representa um desafio único,
          não apenas em poder, mas também na forma como afeta a vida de Peter Parker. Entre os mais conhecidos está o Duende Verde, 
@@ -29,7 +43,7 @@
         </p></div>
     </div>
     <div id="imagemVenom"><img src="imgs/imgsSite/Venom.png" alt=""></div>   
-    </div>
+    </div> -->
     <div class="textAlign">
         <h2>O SEXTETO SINISTRO</h2>
         <p id="SinisterSix">O Sexteto Sinistro é um grupo formado por alguns dos inimigos mais perigosos do Homem-Aranha, reunidos com um único objetivo: 
@@ -39,7 +53,8 @@
             dos quadrinhos da Marvel.
         </p>
     </div>
-    <div class="boxVilao">
+    </main>
+        <div class="boxVilao">
         <div class="boxVilaoItem">
             <img src="/imgs/imgsSite/Six/octopus.jpg" alt="">
             <H3>DOUTOR OCTOPUS</H3>
