ajustes de urls

--- a/Homem aranha.html
+++ b/Homem aranha.html
@@ -21,10 +21,10 @@
 
         <nav class="nav-menu">
 
-            <a href="/index.html" class="nav-item">Home</a>
-            <a href="/Homem aranha.html" class="nav-item">Homem Aranha</a>
-            <a href="/viloes.html" class="nav-item">Vilões</a>
-            <a href="/Universo.html" class="nav-item">Universo</a>
+            <a href="index.html" class="nav-item">Home</a>
+            <a href="Homem aranha.html" class="nav-item">Homem Aranha</a>
+            <a href="viloes.html" class="nav-item">Vilões</a>
+            <a href="Universo.html" class="nav-item">Universo</a>
 
         </nav>
     </header>
@@ -51,7 +51,7 @@
                         A sua agilidade e resistência acompanham essa força, permitindo-lhe mover-se rapidamente entre prédios e enfrentar 
                         ameaças que seriam impossíveis de combater sem as suas habilidades.
                     </p>
-                    <img src="/imgs/imgsSite/força.jpeg" alt="">
+                    <img src="imgs/imgsSite/força.jpeg" alt="">
                 </div>
                 <div class="box-frame">
                     <h3>SENTIDO-ARANHA</h3>
@@ -61,7 +61,7 @@
                         Esse sentido é extremamente sensível, capaz de detectar movimentos e intenções hostis, mesmo quando o perigo 
                         não está visível. É a sua linha de defesa mais confiável.
                     </p>
-                    <img src="/imgs/imgsSite/SentidoAranha.jpg" alt="">
+                    <img src="imgs/imgsSite/SentidoAranha.jpg" alt="">
                 </div>
                 <div class="box-frame">
                     <h3>TEIAS</h3>
@@ -70,7 +70,7 @@
                         que ele dispare teias adesivas para se balançar entre prédios, capturar inimigos e criar barreiras. As teias são 
                         incrivelmente resistentes e versáteis, sendo uma das ferramentas mais icônicas do herói.
                     </p>
-                    <img src="/imgs/imgsSite/teia.webp" alt="">
+                    <img src="imgs/imgsSite/teia.webp" alt="">
                 </div>
             </div>
     </div>
