--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
         <nav class="nav-menu">
 
-            <a href="/index.html" class="nav-item">Home</a>
-            <a href="/Homem aranha.html" class="nav-item">Homem Aranha</a>
-            <a href="/viloes.html" class="nav-item">Vilões</a>
-            <a href="/Universo.html" class="nav-item">Universo</a>
+            <a href="index.html" class="nav-item">Home</a>
+            <a href="Homem aranha.html" class="nav-item">Homem Aranha</a>
+            <a href="viloes.html" class="nav-item">Vilões</a>
+            <a href="Universo.html" class="nav-item">Universo</a>
 
         </nav>
     </header>
