--- a/viloes.html
+++ b/viloes.html
@@ -21,10 +21,10 @@
 
         <nav class="nav-menu">
 
-            <a href="/index.html" class="nav-item">Home</a>
-            <a href="/Homem aranha.html" class="nav-item">Homem Aranha</a>
-            <a href="/viloes.html" class="nav-item">Vilões</a>
-            <a href="/Universo.html" class="nav-item">Universo</a>
+            <a href="index.html" class="nav-item">Home</a>
+            <a href="Homem aranha.html" class="nav-item">Homem Aranha</a>
+            <a href="viloes.html" class="nav-item">Vilões</a>
+            <a href="Universo.html" class="nav-item">Universo</a>
 
         </nav>
     </header>
@@ -56,32 +56,32 @@
     </main>
         <div class="boxVilao">
         <div class="boxVilaoItem">
-            <img src="/imgs/imgsSite/Six/octopus.jpg" alt="">
+            <img src="imgs/imgsSite/Six/octopus.jpg" alt="">
             <H3>DOUTOR OCTOPUS</H3>
             <p>OTTO GUNTHER OCTAVIUS</p>
         </div>
         <div class="boxVilaoItem">
-            <img src="/imgs/imgsSite/Six/electro.jpg" alt="">
+            <img src="imgs/imgsSite/Six/electro.jpg" alt="">
             <H3>ELECTRO</H3>
             <p>MAXWELL DILLON</p>
         </div>
         <div class="boxVilaoItem">
-            <img src="/imgs/imgsSite/Six/kraven.jpg" alt="">
+            <img src="imgs/imgsSite/Six/kraven.jpg" alt="">
             <H3>KRAVEN, O CAÇADOR</H3>
             <p>SERGEI KRAVINOFF</p>
         </div>
         <div class="boxVilaoItem">
-            <img src="/imgs/imgsSite/Six/sandman.png" alt="">
+            <img src="imgs/imgsSite/Six/sandman.png" alt="">
             <H3>HOMEM-AREIA</H3>
             <p>WILLIAM BAKER</p>
         </div>
         <div class="boxVilaoItem">
-            <img src="/imgs/imgsSite/Six/mysterio.jpg" alt="">
+            <img src="imgs/imgsSite/Six/mysterio.jpg" alt="">
             <H3>MYSTÉRIO</H3>
             <p>QUENTIN BECK</p>
         </div>
         <div class="boxVilaoItem">
-            <img src="/imgs/imgsSite/Six/lizard.png" alt="">
+            <img src="imgs/imgsSite/Six/lizard.png" alt="">
             <H3>LAGARTO</H3>
             <p>DR. CURTIS CONNORS</p>
         </div>
