--- a/Universo.html
+++ b/Universo.html
@@ -21,10 +21,10 @@
 
         <nav class="nav-menu">
 
-            <a href="/index.html" class="nav-item">Home</a>
-            <a href="/Homem aranha.html" class="nav-item">Homem Aranha</a>
-            <a href="/viloes.html" class="nav-item">Vilões</a>
-            <a href="/Universo.html" class="nav-item">Universo</a>
+            <a href="index.html" class="nav-item">Home</a>
+            <a href="Homem aranha.html" class="nav-item">Homem Aranha</a>
+            <a href="viloes.html" class="nav-item">Vilões</a>
+            <a href="Universo.html" class="nav-item">Universo</a>
 
         </nav>
     </header>
@@ -44,7 +44,7 @@
         <div class="universo-list">
 
             <div class="universo-item">
-                <img src="/imgs/imgsSite/universe/maryjane.jpg" alt="Mary Jane">
+                <img src="imgs/imgsSite/universe/maryjane.jpg" alt="Mary Jane">
                 <div class="universo-texto">
                     <h3>Mary Jane Watson</h3>
                     <p>Mary Jane é uma das pessoas mais importantes na vida de Peter Parker, representando equilíbrio entre a vida pessoal e a vida de herói.</p>
@@ -52,7 +52,7 @@
             </div>
 
             <div class="universo-item">
-                <img src="/imgs/imgsSite/universe/tioben.jpg" alt="Tio Ben">
+                <img src="imgs/imgsSite/universe/tioben.jpg" alt="Tio Ben">
                 <div class="universo-texto">
                     <h3>Tio Ben</h3>
                     <p>A morte de Tio Ben deu origem ao lema que define o herói: “Com grandes poderes vêm grandes responsabilidades”.</p>
@@ -60,7 +60,7 @@
             </div>
 
             <div class="universo-item">
-                <img src="/imgs/imgsSite/universe/newyork.jpg" alt="Nova Iorque">
+                <img src="imgs/imgsSite/universe/newyork.jpg" alt="Nova Iorque">
                 <div class="universo-texto">
                     <h3>Nova Iorque</h3>
                     <p>A cidade onde tudo acontece um cenário vibrante perfeito para o Homem-Aranha.</p>
@@ -68,7 +68,7 @@
             </div>
 
             <div class="universo-item">
-                <img src="/imgs/imgsSite/universe/dailybungle.jpg" alt="O Clarim Diário">
+                <img src="imgs/imgsSite/universe/dailybungle.jpg" alt="O Clarim Diário">
                 <div class="universo-texto">
                     <h3>O Clarim Diário</h3>
                     <p>O jornal mais famoso do universo, onde Peter trabalha como fotógrafo enquanto Jameson difama o herói.</p>
@@ -76,7 +76,7 @@
             </div>
 
             <div class="universo-item">
-                <img src="/imgs/imgsSite/universe/tiamay.jpg" alt="Amigos e Aliados">
+                <img src="imgs/imgsSite/universe/tiamay.jpg" alt="Amigos e Aliados">
                 <div class="universo-texto">
                     <h3>Tia May</h3>
                     <p>Tia May é a figura maternal mais importante na vida de Peter Parker. Ela representa o lar, o apoio emocional e a força silenciosa que o inspira a continuar sendo o Homem-Aranha.</p>
