adicionando acessiblidade e testando o funcionamento

--- a/Homem aranha.html
+++ b/Homem aranha.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
     </header>
 <main>
         <div class="content">
-            <div id="imagem"><img src="imgs/imgsSite/spider2.png" alt=""></div>   
+            <div id="imagem"><img src="imgs/imgsSite/spider2.png" alt="Homem-Aranha2"></div>   
             <div class="title">
             <div><h1>QUEM É?</h1></div>
             <div class="about"><p>O Homem-Aranha, identidade assumida por Peter Parker, é um herói marcado pela coragem, pela empatia e por um humor que o acompanha 
@@ -51,7 +51,7 @@
                         A sua agilidade e resistência acompanham essa força, permitindo-lhe mover-se rapidamente entre prédios e enfrentar 
                         ameaças que seriam impossíveis de combater sem as suas habilidades.
                     </p>
-                    <img src="imgs/imgsSite/força.jpeg" alt="">
+                    <img src="imgs/imgsSite/força.jpeg" alt="homem aranha usando sua força">
                 </div>
                 <div class="box-frame">
                     <h3>SENTIDO-ARANHA</h3>
@@ -61,7 +61,7 @@
                         Esse sentido é extremamente sensível, capaz de detectar movimentos e intenções hostis, mesmo quando o perigo 
                         não está visível. É a sua linha de defesa mais confiável.
                     </p>
-                    <img src="imgs/imgsSite/SentidoAranha.jpg" alt="">
+                    <img src="imgs/imgsSite/SentidoAranha.jpg" alt="Homem-Aranha usando o sentido-aranha">
                 </div>
                 <div class="box-frame">
                     <h3>TEIAS</h3>
@@ -70,7 +70,7 @@
                         que ele dispare teias adesivas para se balançar entre prédios, capturar inimigos e criar barreiras. As teias são 
                         incrivelmente resistentes e versáteis, sendo uma das ferramentas mais icônicas do herói.
                     </p>
-                    <img src="imgs/imgsSite/teia.webp" alt="">
+                    <img src="imgs/imgsSite/teia.webp" alt="homem aranha usando suas teias">
                 </div>
             </div>
     </div>
