--- a/Universo.html
+++ b/Universo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
     </header>
     <main>
         <div class="textAlign">
-            <h2>O UNIVERSO</h2>
+            <h1>O UNIVERSO</h1>
             <div class="title"><p>O universo do Homem-Aranha é vasto, emocional e cheio de personagens e acontecimentos que moldam a 
                 vida de Peter Parker dentro e fora da máscara. Desde relações pessoais profundas até os cenários vibrantes de Nova Iorque, 
                 cada elemento contribui para construir a história de um herói humano, falível e inspirador. A seguir, estão alguns dos pilares
