--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
     </header>
     <div class="content">
     <div class="title"><h1>SPIDER-MAN</h1></div>
-    <div id="imagem"><img src="imgs/imgsSite/Spider1.png" alt=""></div>
+    <div id="imagem"><img src="imgs/imgsSite/Spider1.png" alt="Homem-Aranha"></div>
     </div>    
 
 </body>
