--- a/viloes.html
+++ b/viloes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,22 +30,10 @@
     </header>
 
     <main>
-    <div class="contentPag3">
-    <!-- <div class="title">
-    <div id="boxi"><h1>OS VILÕ ES</h1></div>
-    <div><p>O Homem-Aranha enfrenta alguns dos vilões mais marcantes e complexos do universo Marvel. Cada inimigo representa um desafio único,
-         não apenas em poder, mas também na forma como afeta a vida de Peter Parker. Entre os mais conhecidos está o Duende Verde, 
-         talvez o seu maior adversário, cuja ligação pessoal a Peter torna cada confronto intenso e emocional. Há também o Doutor Octopus, 
-         um génio da ciência corrompido pelo seu próprio ego, que desafia o herói tanto fisicamente quanto intelectualmente.
-        Outro antagonista icónico é Venom, uma combinação perigosa entre o simbionte alienígena e um hospedeiro consumido pelo ódio, 
-        refletindo uma versão distorcida e sombria do próprio Homem-Aranha. Além deles, figuras como o Homem-Areia, Lagarto, Electro e 
-        Mystério compõem uma galeria de ameaças diversas, cada uma com motivações e métodos próprios.
-        </p></div>
-    </div>
-    <div id="imagemVenom"><img src="imgs/imgsSite/Venom.png" alt=""></div>   
-    </div> -->
+    <!-- <div class="contentPag3"> -->
     <div class="textAlign">
-        <h2>O SEXTETO SINISTRO</h2>
+        <h1>O SEXTETO SINISTRO</h1>
+        
         <p id="SinisterSix">O Sexteto Sinistro é um grupo formado por alguns dos inimigos mais perigosos do Homem-Aranha, reunidos com um único objetivo: 
             derrotar o herói. A equipa original foi criada pelo <b>Doutor Octopus</b> e incluía <b>Electro</b>, <b>Kraven, o Caçador</b>, <b>Homem-Areia</b>, <b>Mystério</b> 
             e <b>Abutre</b>. Juntos, combinaram as suas habilidades e estratégias na esperança de superar o herói, mas mesmo enfrentando vários 
