mellhorando a acessibilidade, permitindo um melhor visionamento do site

--- a/viloes.html
+++ b/viloes.html
@@ -44,33 +44,33 @@
     </main>
         <div class="boxVilao">
         <div class="boxVilaoItem">
-            <img src="imgs/imgsSite/Six/octopus.jpg" alt="">
-            <H3>DOUTOR OCTOPUS</H3>
+            <img src="imgs/imgsSite/Six/octopus.jpg" alt="Doutor Octopus">
+            <h2>DOUTOR OCTOPUS</h2>
             <p>OTTO GUNTHER OCTAVIUS</p>
         </div>
         <div class="boxVilaoItem">
-            <img src="imgs/imgsSite/Six/electro.jpg" alt="">
-            <H3>ELECTRO</H3>
+            <img src="imgs/imgsSite/Six/electro.jpg" alt=" Electro">
+            <h2>ELECTRO</h2>
             <p>MAXWELL DILLON</p>
         </div>
         <div class="boxVilaoItem">
-            <img src="imgs/imgsSite/Six/kraven.jpg" alt="">
-            <H3>KRAVEN, O CAÇADOR</H3>
+            <img src="imgs/imgsSite/Six/kraven.jpg" alt=" Kraven, o caçador">
+            <h2>KRAVEN, O CAÇADOR</h2>
             <p>SERGEI KRAVINOFF</p>
         </div>
         <div class="boxVilaoItem">
-            <img src="imgs/imgsSite/Six/sandman.png" alt="">
-            <H3>HOMEM-AREIA</H3>
+            <img src="imgs/imgsSite/Six/sandman.png" alt=" Homem-Areia">
+            <h2>HOMEM-AREIA</h2>
             <p>WILLIAM BAKER</p>
         </div>
         <div class="boxVilaoItem">
-            <img src="imgs/imgsSite/Six/mysterio.jpg" alt="">
-            <H3>MYSTÉRIO</H3>
+            <img src="imgs/imgsSite/Six/mysterio.jpg" alt=" Mystério">
+            <h2>MYSTÉRIO</h2>
             <p>QUENTIN BECK</p>
         </div>
         <div class="boxVilaoItem">
-            <img src="imgs/imgsSite/Six/lizard.png" alt="">
-            <H3>LAGARTO</H3>
+            <img src="imgs/imgsSite/Six/lizard.png" alt=" Lagarto">
+            <h2>LAGARTO</h2>
             <p>DR. CURTIS CONNORS</p>
         </div>
     </div>
